# Damaged-Package-Detection

./: .coveragerc  .gitignore  .gitlab-ci.yml  .gitmodules  Developer_Tutorials.md  LICENSE  Makefile  README.md  azure_tf_train.yaml  azure_yolo_train.yaml  requirements.txt  setup.cfg
aisscv/: __RepoPath__.py  __init__.py  __main__.py  aisscv_app.py
aisscv/augmentation/: __init__.py  augment_dataset.py  augment_dataset_with_damages.ipynb  augment_dataset_with_damages.py
aisscv/inference/: Run_Inference.ipynb  __init__ .py  camera.py  control_loop.py  display.py  model_interface.py  ssd_tf.py  visualization.py  yolo_with_plugins.py
aisscv/utils/: README.md  __init__.py  convert_png_to_jpg.ipynb  crop_resize.py  label_helper.py  label_reader.py  negative_examples.py  pascal_voc_to_tfrecord.py  pascal_voc_to_yolo.py  read_to_tensorboard.py  rescale_and_convert_to_int.ipynb
dockerfiles/: Dockerfile.aiss  Dockerfile.tftrain  Dockerfile.yolo-amd64-cpu  Dockerfile.yolo-amd64-gpu  Dockerfile.yolo-amd64-gpu-azure  Dockerfile.yolo-jetson
docs/: Makefile  README.md  make.bat
docs/source/: conf.py  index.rst
docs/source/code-docs/: aisscv.augmentation.rst  aisscv.inference.rst  aisscv.utils.rst  tests.rst
tests/: __init__.py  test_module.py
training/yolov4/: README.md
training/yolov4/4-class/: aisscv-yolo-4class-train.txt  aisscv-yolo-4class-validation.txt  aisscv-yolo-4class.data  aisscv-yolo-4class.names  (+3 more)
training/yolov4/4-class-azure-train/: aisscv-yolo-4class-train.txt  aisscv-yolo-4class-validation.txt  aisscv-yolo-4class.data  aisscv-yolov4-4class.cfg
(+21 files in other folders)
