[metadata]
# replace with your username:
name = aiss-cv
version = 0.0.1
description = The AISS-CV project
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License    

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = .